<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/search_button_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Search a movie here"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <TextView
            android:textStyle="bold"
            android:text="@string/serie_genre"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            ></TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/serie_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textStyle="bold"
                android:text="@string/trend_serie"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                ></TextView>
            <TextView
                android:id="@+id/serie_trend_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/see_all"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                ></TextView>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trend_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textStyle="bold"
                android:text="@string/popular_serie"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                ></TextView>
            <TextView
                android:id="@+id/popular_serie_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/see_all"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                ></TextView>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textStyle="bold"
                android:text="@string/top_rated_serie"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                ></TextView>
            <TextView
                android:id="@+id/topRated_serie_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="See all"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                ></TextView>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topRated_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>




    </LinearLayout>

</ScrollView>